--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 lang: en-US
-title: ElephWebb
+title: ElephWebb.io
 email: elephwebb@gmail.com
 description:
 baseurl: # the optional subpath of your site, e.g. "/blog"
