--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-paginate
+  - jemoji
 feed:
   path: atom.xml
 
@@ -65,6 +66,7 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - vendor
   - /docs # ignore Basically Basic sample site
   - /example # ignore Basically Basic dev site
 
@@ -78,6 +80,10 @@ collections:
     output    : true
     permalink : /:collection/:path/
     title     : Projects
+  projects:
+    output    : true
+    permalink : /:collection/:path/
+    title     : Posts  
 
 # Front Matter Defaults
 defaults:
@@ -87,12 +93,12 @@ defaults:
       type: posts
     values:
       layout: post
-      category: articles
+      category: posts
       read_time: true
       support: true
       breadcrumbs:
-        - label: "Blog Articles"
-          url: /articles/
+        - label: "Posts"
+          url: /posts/
   - scope:
       path: _projects
       type: projects
@@ -104,3 +110,9 @@ defaults:
           url: /projects/
       seo:
         type: "Working Projects"   
+      # Pages
+  - scope:
+      path: _pages
+      type: pages
+    values:
+      layout: page    
