Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: ElephWebb.io
 email: elephwebb@gmail.com
 description:
 baseurl: # the optional subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://elephwebb.github.io"
 author:
   name: elephwebb
   twitter: MrElephWebb
