Refactor web page

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   picture:
 twitter_username: MrElephWebb
 google_analytics: UA-111140858-1
-github_username: elephwebb
+github_username: mrjhonyvidal
 logo: # path of site logo, e.g. "/assets/images/logo.png"
 
 # Build settings
@@ -83,7 +83,7 @@ collections:
   projects:
     output    : true
     permalink : /:collection/:path/
-    title     : Posts  
+    title     : Posts
 
 # Front Matter Defaults
 defaults:
@@ -109,10 +109,10 @@ defaults:
         - label: "Projects"
           url: /projects/
       seo:
-        type: "Working Projects"   
+        type: "Working Projects"
       # Pages
   - scope:
       path: _pages
       type: pages
     values:
-      layout: page    
+      layout: page
