--- a/_config.yml
+++ b/_config.yml
@@ -15,16 +15,16 @@
 # in the templates via {{ site.myvariable }}.
 lang: en-US
 title: jvo.io
-email: elephwebb@gmail.com
+email: mrjhonyvidal@gmail.com
 description:
 baseurl: # the optional subpath of your site, e.g. "/blog"
 url: "https://mrjhonyvidal.github.io"
 author:
-  name: elephwebb
-  twitter: MrElephWebb
+  name: mrjhonyvidal
+  twitter: mr_jhony_vidal
   picture:
-twitter_username: MrElephWebb
-google_analytics: UA-111140858-1
+twitter_username: mr_jhony_vidal
+google_analytics: UA-211208164-1
 github_username: mrjhonyvidal
 logo: # path of site logo, e.g. "/assets/images/logo.png"
 
